platform/network/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.0.200
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: argocd.icaninto.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: longhorn-https
      hostname: longhorn.icaninto.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
